--- a/CSharpDll.csproj
+++ b/CSharpDll.csproj
@@ -158,6 +158,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChromecastPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ChromecastSelection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +168,11 @@
       <DependentUpon>ChromecastSelection.cs</DependentUpon>
     </Compile>
     <Compile Include="MusicBeeInterface.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TestCSharpDll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -198,6 +206,28 @@
     <EmbeddedResource Include="ChromecastSelection.resx">
       <DependentUpon>ChromecastSelection.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\chromecast_icon_connect.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\connect_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forward.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
