--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,13 @@
   <package id="GoogleCast" version="1.6.7" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Diagnostics" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.FileSystems" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.SelfHost" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.StaticFiles" version="4.1.0" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="5.0.0" targetFramework="net461" />
   <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net461" />
   <package id="Nito.AsyncEx.Coordination" version="5.0.0" targetFramework="net461" />
@@ -12,6 +19,7 @@
   <package id="Nito.Cancellation" version="1.0.5" targetFramework="net461" />
   <package id="Nito.Collections.Deque" version="1.0.4" targetFramework="net461" />
   <package id="Nito.Disposables" version="2.0.0" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="protobuf-net" version="2.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
