--- a/CSharpDll.csproj
+++ b/CSharpDll.csproj
@@ -189,6 +189,9 @@
     <Compile Include="ChromecastPanel.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ChromecastPanel.Designer.cs">
+      <DependentUpon>ChromecastPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChromecastSelection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -201,11 +204,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestCSharpDll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
@@ -238,6 +250,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ChromecastPanel.resx">
+      <DependentUpon>ChromecastPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChromecastSelection.resx">
       <DependentUpon>ChromecastSelection.cs</DependentUpon>
     </EmbeddedResource>
