--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GoogleCast" version="1.6.7" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.29" targetFramework="net461" />
+  <package id="ILMerge.MSBuild.Task" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
@@ -18,7 +20,7 @@
   <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net461" />
   <package id="Nito.Cancellation" version="1.0.5" targetFramework="net461" />
   <package id="Nito.Collections.Deque" version="1.0.4" targetFramework="net461" />
-  <package id="Nito.Disposables" version="2.0.0" targetFramework="net461" />
+  <package id="Nito.Disposables" version="2.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="protobuf-net" version="2.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net461" />
