--- a/CSharpDll.csproj
+++ b/CSharpDll.csproj
@@ -92,9 +92,6 @@
     <Reference Include="Google.ProtocolBuffers.Serialization">
       <HintPath>..\SharpCast-master\SharpCast\bin\Release\Google.ProtocolBuffers.Serialization.dll</HintPath>
     </Reference>
-    <Reference Include="MaterialSkin">
-      <HintPath>F:\Users\Troy\Downloads\MaterialSkin.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.DependencyInjection.2.1.1\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
     </Reference>
@@ -156,9 +153,6 @@
     <Reference Include="protobuf-net, Version=2.4.0.0, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
       <HintPath>packages\protobuf-net.2.4.0\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
-    <Reference Include="SharpCastLib">
-      <HintPath>..\SharpCast-master\SharpCast\bin\Release\SharpCastLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Collections.Immutable.1.4.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
@@ -188,12 +182,6 @@
     </Compile>
     <Compile Include="ChromecastPanel.Designer.cs">
       <DependentUpon>ChromecastPanel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ChromecastSelection.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChromecastSelection.Designer.cs">
-      <DependentUpon>ChromecastSelection.cs</DependentUpon>
     </Compile>
     <Compile Include="MusicBeeInterface.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -246,53 +234,50 @@
     <EmbeddedResource Include="ChromecastPanel.resx">
       <DependentUpon>ChromecastPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChromecastSelection.resx">
-      <DependentUpon>ChromecastSelection.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\chromecast_icon_connect.png" />
+    <Resource Include="Resources\chromecast_icon_connect.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\connect_icon.png" />
+    <Resource Include="Resources\connect_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\back.png" />
+    <Resource Include="Resources\back.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\forward.png" />
+    <Resource Include="Resources\forward.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\pause.png" />
+    <Resource Include="Resources\pause.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\play.png" />
+    <Resource Include="Resources\play.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\connected_icon.png" />
+    <Resource Include="Resources\connected_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\library_icon.png" />
+    <Resource Include="Resources\library_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\server_icon.png" />
+    <Resource Include="Resources\server_icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\connect_icon_OK.png" />
+    <Resource Include="Resources\connect_icon_OK.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\library_icon_OK.png" />
+    <Resource Include="Resources\library_icon_OK.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\server_icon_OK.png" />
+    <Resource Include="Resources\server_icon_OK.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="F:\Users\Troy\Downloads\GoogleCast-master\GoogleCast\GoogleCast.csproj">
-      <Project>{17514b85-d288-47ca-b07e-a4c0e7eae196}</Project>
+    <ProjectReference Include="..\..\GoogleCast\GoogleCast.csproj">
+      <Project>{6b40b865-44f8-4ccc-9c9c-271eb9b31e6b}</Project>
       <Name>GoogleCast</Name>
     </ProjectReference>
   </ItemGroup>
