--- a/app.config
+++ b/app.config
@@ -29,4 +29,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
 </configuration>
