--- a/MBCCRules/MBCCRules.csproj
+++ b/MBCCRules/MBCCRules.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
@@ -11,8 +11,8 @@
       <Guid>58fbcf7c-e7a9-467c-80b3-fc65e8fcca08</Guid>
       <VersionMajor>1</VersionMajor>
       <VersionMinor>0</VersionMinor>
-      <WrapperTool>tlbimp</WrapperTool>
       <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
       <Isolated>false</Isolated>
     </COMReference>
   </ItemGroup>
