--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FlacLibSharp" version="3.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
